# mtgbot

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  bot.py  config.py  docker-compose.yml  dockerfile  filters.py  index.html  internal.py  lottie2gif  main.py  monkeypatch.py  plugin.py  pyproject.toml  requirements.txt  run.ps1  tgbot.ps1  tgbot.sh
.github/workflows/: sphinx.yml
docs/: README.md
docs/source/: catalogue.rst  conf.py  index.rst  modules.rst  quick_start.rst
en/: .buildinfo  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  quick_start.html  search.html  searchindex.js
en/.doctrees/: environment.pickle  index.doctree  installation.doctree  modules.doctree  quick_start.doctree
en/_sources/: index.rst.txt  installation.rst.txt  modules.rst.txt
en/modules/: bot.html  config.html  filters.html  main.html  modules.html  plugin.html  util.html
libs/: librlottie.so.0
libs/telethon/: utils.py
moe/plugins/: help.py
mtgbot/: .env.example
mtgbot/plugins/: help.py  info.py  mark.py  roll.py  unmark.py
reports/: fuck_u_code_report_20250816_093925.md
tgbot/: .env.example  scopes.toml
tgbot/plugins/: help.py
tgbot2/: .env.example
tgbot2/plugins/: communicate.py  help.py
util/: __init__.py  base.py  curl.py  data.py  file.py  log.py  media.py  progress.py  string.py  telegraph.py
zh/: .buildinfo  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  quick_start.html  search.html  searchindex.js
zh/.doctrees/: environment.pickle  index.doctree  (+3 more)
(+84 files in other folders)
